# react-native-cpp-library

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-cpp-library.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/cpplibrary/: CppLibraryModule.java  CppLibraryPackage.java
cpp/: NativeCppLibraryModule.cpp  NativeCppLibraryModule.h  react-native-cpp-library.cpp  react-native-cpp-library.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/cpplibraryexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile
example/ios/CppLibraryExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/CppLibraryExample.xcodeproj/: project.pbxproj
example/ios/CppLibraryExample.xcodeproj/xcshareddata/xcschemes/: CppLibraryExample.xcscheme
example/ios/CppLibraryExampleTests/: CppLibraryExampleTests.m
example/src/: App.tsx
ios/: CppLibrary.h  CppLibrary.mm
src/: NativeCppLibrary.ts  index.tsx
